--- a/assets/style.css
+++ b/assets/style.css
@@ -57,6 +57,11 @@ p{
 #showcase .content-wrap, #section-a .content-wrap{
     padding: 0 1.5em;
 }
+#showcase p{
+    animation-duration: 5s;
+    animation-name: slidein;
+    animation-direction: alternate;
+}
 #section-a{
     background: #eaeaea;
     color: #333;
@@ -101,28 +106,34 @@ p{
     color: #2690d4;
     text-decoration: none;
 }
-.grid{
-    display: grid;
-    grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+@keyframes slidein{
+    from {
+        margin-left: 100%;
+        width: 100%;
+    }
+    
 }
-#section-a .content-text{
-    columns: 2;
-    column-gap: 2em;
+@media (min-width: 701px){
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+    }
+    #section-a .content-text p{
+        columns: 2;
+        column-gap: 2em;
+        padding-top: 0;
+    }
+    .content-wrap, #section-b ul{
+        grid-column: 2/4;
+        }
+    .box, #main-footer div{
+        grid-column: span 2;
+    }
+    #section-b ul{
+        display: flex;
+        justify-content: space-around;
+    }
+    #section-b li{
+        width: 31%;
+    }
 }
-#section-a .content-text p{
-    padding-top: 0;
-}
-.content-wrap, #section-b ul{
-    grid-column: 2/4;
-}
-.box, #main-footer div{
-    grid-column: span 2;
-}
-#section-b ul{
-    display: flex;
-    justify-content: space-around;
-}
-#section-b li{
-    width: 31%;
-}
-  
