--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ p{
 }
 #showcase .content-wrap h1{
     width: 100%;
-    animation: 2s linear 1s 2 alternate slideLeft;
+    animation: 2s linear 1s alternate slideLeft;
 }
 #section-a{
     background: #eaeaea;
@@ -106,11 +106,14 @@ p{
     text-decoration: none;
 }
 @keyframes slideLeft{
-    from {
+    0% {
         margin-left: 160%;
     }      
-    to {
+    50% {
         margin-left: -80%;
+    }
+    100% {
+        margin-left:0%;
     }  
 }
 /* @keyframes slideRight{
